# opencode-a2a-server

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  SECURITY.md  pyproject.toml  release_manifest.json
.github/workflows/: ci.yml
docs/: agent_deploy_sop.md  agent_deploy_sop.zh-CN.draft.md  deployment.md  guide.md  init_system.md
docs/assessments/: opencode-control-capability-assessment.md  release_manifest_proposal.md
docs/extensions/: opencode_session_query.md
docs/operations/: index.md
docs/operations/opencode/: openapi-serve-1.2.4.json  openapi-snapshot.md
docs/operations/scripts/: deploy.md  index.md  init_system.md  start_services.md  uninstall.md
scripts/: README.md  deploy.sh  deploy_light.sh  deploy_light_readme.md  deploy_readme.md  gen_release_manifest.py  init_system.sh  init_system_readme.md  init_system_uv_release_manifest.sh  lint.sh  start_services.sh  start_services_readme.md  uninstall.sh  uninstall_readme.md  verify_auth_interceptor.py
scripts/deploy/: enable_instance.sh  install_units.sh  run_a2a.sh  run_opencode.sh  setup_instance.sh  update_a2a.sh
src/opencode_a2a/: __init__.py  a2a_client.py  agent.py  app.py  config.py  jsonrpc_ext.py  opencode_client.py
src/opencode_a2a_serve/: agent.py  app.py  config.py  extension_contracts.py  jsonrpc_ext.py  opencode_client.py
src/opencode_a2a_server/: agent.py  app.py  config.py  extension_contracts.py  opencode_client.py
tests/: helpers.py  test_agent_card.py  test_agent_errors.py  test_app_auth.py  test_auth_interceptor.py  test_auth_interceptor_integration.py  test_call_context_builder.py  test_cancel_contract.py  test_cancellation.py  test_config_jwt_secret_sources.py  test_deploy_security_contract.py  test_directory_validation.py  test_extension_contract_consistency.py  test_init_system_security.py  test_opencode_agent_session_binding.py  test_opencode_client_params.py  test_opencode_session_extension.py  test_session_ownership.py  test_settings.py  test_streaming_output_contract.py  test_transport_contract.py
