[project]
name = "opencode-a2a-serve"
version = "0.1.0"
description = "A2A wrapper service for opencode"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk==0.3.24",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sse-starlette>=2.1",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pip-audit>=2.9",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
opencode-a2a-serve = "opencode_a2a_serve.app:main"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = true
