[project]
name = "opencode-a2a-serve"
version = "0.1.0"
description = "A2A wrapper service for opencode"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk==0.3.24",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sse-starlette>=2.1",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pip-audit>=2.9",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
    "ruff>=0.5",
]

[project.scripts]
opencode-a2a-serve = "opencode_a2a_serve.app:main"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = true

[tool.mypy]
python_version = "3.11"
files = ["src/opencode_a2a_serve"]
ignore_missing_imports = true
show_error_codes = true
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov=src/opencode_a2a_serve --cov-report=term-missing --cov-fail-under=80"
