[project]
name = "opencode-a2a-server"
version = "0.1.0"
description = "A2A wrapper service for opencode"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "liujuanjuan1984@Intelligent-Internet" },
]
keywords = ["a2a", "opencode", "fastapi", "json-rpc", "sse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "a2a-sdk==0.3.24",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sse-starlette>=2.1",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pip-audit>=2.9",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
    "ruff>=0.5",
]

[project.scripts]
opencode-a2a-server = "opencode_a2a_server.app:main"

[project.urls]
Homepage = "https://github.com/Intelligent-Internet/opencode-a2a-server"
Repository = "https://github.com/Intelligent-Internet/opencode-a2a-server"
Issues = "https://github.com/Intelligent-Internet/opencode-a2a-server/issues"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = true

[tool.mypy]
python_version = "3.11"
files = ["src/opencode_a2a_server"]
ignore_missing_imports = true
show_error_codes = true
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov=src/opencode_a2a_server --cov-report=term-missing --cov-fail-under=80"
